# nginx_kos

./: README.md
kos/example/: CMakeLists.txt  README.md
kos/example/einit/: CMakeLists.txt
kos/example/einit/src/: init.yaml.in  security.psl
kos/example/resources/hdd/usr/local/nginx/conf/: nginx.conf
kos/example/resources/hdd/www/: index.html
kos/nginx/: CMakeLists.txt  Nginx.edl  nginx-config.cmake.in
objs/: ngx_auto_config.h  ngx_auto_headers.h  ngx_modules.c
src/core/: nginx.c  ngx_config.h  ngx_cycle.c
src/event/: ngx_event.c
src/os/kos/: ngx_kos_config.h
src/os/unix/: ngx_alloc.c  ngx_posix_init.c  ngx_process.c  ngx_process_cycle.c  ngx_readv_chain.c  ngx_shmem.c  ngx_socket.c  ngx_udp_sendmsg_chain.c
